syntax = "proto3";

option java_multiple_files = true;

option java_package = "dev.nomenarav";

service NoteService{
  rpc CreateNote(CreateNoteRequest) returns (Note);
  rpc GetNote(GetNoteRequest) returns (Note);
}

message CreateNoteRequest{
  string title = 1;
  string content = 2;
}

message GetNoteRequest{
  string id = 1;
}

message Note{
  string id = 1;
  string title = 2;
  string content = 3;
}